--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="CSS/Home.css">
+    <link rel="stylesheet" href="CSS/script.css">
 
 </head>
 <body class="body">
@@ -45,7 +46,7 @@
                 <form class="row g-3">
                     <div class="col-auto">
                         <label for="inputCity" class="visually-hidden"></label>
-                        <input id="inputCity" type="text" class="form-control" placeholder="Your City">
+                        <input id="inputCity" onchange="onType()" type="text" class="form-control" placeholder="City">
                       </div>
                     <div class="col-auto">
                       <label for="inputDate" class="visually-hidden"></label>
@@ -169,7 +170,8 @@
         });
       });
     </script>
-   <script src="./script/script.js"></script>
+   <script type="text/javascript" src="./script/notify.min.js"></script>
+   <script type="text/javascript" src="./script/script.js"></script>
   </body>
 </html>
 
