--- a/Home.html
+++ b/Home.html
@@ -24,13 +24,14 @@
                         <path d="M11.473 11a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z"/>
                         <path d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
                       </svg>
-                  <h1 id="temp" class="suhu">12*C</h1>
-                  <h5 id="time" class="date">Monday, 16.00</h5>
+                  <h1 id="temp" class="suhu">N/A</h1>
+                  <h5 id="time" class="date">N/A</h5>
                   <div class="icon-condition">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud" viewBox="0 0 16 16">
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cloud" viewBox="0 0 16 16">
                         <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"/>
-                      </svg>
-                    <span id="weatherText"> Monstly Cloudy</span> <br>
+                      </svg> -->
+                    <img id="weatherIcon" src="https://cdn.weatherapi.com/weather/64x64/day/116.png" class="bi bi-cloud alt="weather icon">
+                    <span id="weatherText"> N/A</span> <br>
                   </div>
                     <div class="col coloums">
                         <p id="cityLabel" class="p">New York, NY, USA</p>
@@ -53,12 +54,12 @@
                       <input id="date" type="text" placeholder="yyyy-mm-dd" class="form-control date-box">
                     </div>
                     <div class="col-auto">
-                      <div type="submit" class="btn btn-primary mb-3" onclick="onSubmit()">
+                      <div id="inputButton" type="submit" class="btn btn-primary mb-3 checked" onclick="onSubmit()">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-clockwise icon spinner" viewBox="0 0 16 16">
                           <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
                           <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
                       </svg>
-                        <span class="btn-text">Search</span>
+                        <span id="btn-text" class="btn-text">Search</span>
                     </div>
                   </form>
             </div>
