--- a/Home.html
+++ b/Home.html
@@ -34,7 +34,7 @@
                     <span id="weatherText"> N/A</span> <br>
                   </div>
                     <div class="col coloums">
-                        <p id="cityLabel" class="p">New York, NY, USA</p>
+                        <p id="cityLabel" class="p">City Name</p>
                     </div> 
                   </div>
                 </div>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col-auto">
                       <div id="inputButton" type="submit" class="btn btn-primary mb-3 checked" onclick="onSubmit()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-clockwise icon spinner" viewBox="0 0 16 16">
+                        <svg id="spinner" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-clockwise icon spinner" viewBox="0 0 16 16">
                           <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
                           <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
                       </svg>
