--- a/Home2.html
+++ b/Home2.html
@@ -70,12 +70,10 @@
     
             <!-- bagian kondisi -->
             <div class="kondisi">
-              <div id="kondisi-title" class="bg-white">
-                <div class="kondisi-title-p">
-                    <p>Today's Highlight</p>
-                </div>
-                <div class="kondisi-title-a">
-                    <a class="more btn btn-primary text-center" data-bs-toggle="modal" data-bs-target="#exampleModal">More</a>
+              <div class="row text">
+                <div class="col-6">Today's Highlight</div>
+                <div class="col-6">
+                  <a class="more btn btn-primary text-center" data-bs-toggle="modal" data-bs-target="#exampleModal">More</a>
                 </div>
               </div>
     
