--- a/Home.html
+++ b/Home.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Weather App</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
   <link rel="icon" type="image/x-icon" href="./icon/HDicon.png">
-  <link rel="stylesheet" href="CSS/style.css" />
-  <link rel="stylesheet" href="CSS/script.css" />
+  <link rel="stylesheet" href="CSS/style.css"/>
+  <link rel="stylesheet" href="CSS/script.css"/>
 </head>
-
 <body class="body">
     <div id="mainContainer" class="container">
         <div id="leftPane">  
             <svg id="weatherPic" xmlns="http://www.w3.org/2000/svg" width="250" height="250" fill="currentColor"
                 class="leftItem" viewBox="0 0 16 16">
-                <path d="M11.473 11a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z" />
-                <path d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z" />
+                <path d="M11.473 11a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z"/>
+                <path d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"/>
             </svg>
             <h1 id="temp" class="leftItem">N/A</h1>
             <h5 id="time" class="leftItem">N/A</h5>
             <div class="icon-condition">
                 <img id="weatherIcon" src="https://cdn.weatherapi.com/weather/64x64/day/116.png" class="leftItem" alt="weather icon">
-                <span id="weatherText"> N/A</span> <br />
+                <span id="weatherText"> N/A</span>
+                <br/>
             </div>
             <div class="col coloums">
                 <p id="cityLabel" class="p">City Name</p>
@@ -38,16 +32,15 @@
               <form class="row g-3">
                     <div class="col-auto">
                         <label for="inputCity" class="visually-hidden"></label>
-                        <input id="inputCity" onchange="onType()" type="text" class="form-control" placeholder="City" />
+                        <input id="inputCity" onchange="onType()" type="text" class="form-control" placeholder="City"/>
                     </div>
                     <div class="col-auto">
                         <label for="inputDate" class="visually-hidden"></label>
-                        <input id="date" type="text" placeholder="yyyy-mm-dd" class="form-control date-box" />
+                        <input id="date" type="text" placeholder="yyyy-mm-dd" class="form-control date-box"/>
                     </div>
                     <div class="col-auto">
                         <div id="inputButton" type="submit" class="btn btn-primary mb-3 checked" onclick="onSubmit()">
-                            <svg id="spinner" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                class="bi bi-arrow-clockwise icon spinner" viewBox="0 0 16 16">
+                            <svg id="spinner" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-clockwise icon spinner" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z" />
                                 <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z" />
                             </svg>
@@ -149,7 +142,7 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Grafik</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Graphic</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
